<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_bkt"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/wifiList"
        android:layout_width="match_parent"
        android:layout_height="312dp"
        android:layout_weight="0.97" />

    <Button
        android:id="@+id/scanBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_margin="15dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/button01"
        android:textSize="24dp"
        android:text="@string/btn_scan_wifi" />

    <EditText
        android:id="@+id/txtwifiName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_margin="15dp"
        android:hint="@string/et_wifi_name"
        android:background="@drawable/edit_text"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:password="false"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/txtwifiPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_margin="15dp"
        android:hint="@string/et_wifi_pass"
        android:background="@drawable/edit_text"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:password="false"
        android:textSize="16dp" />

    <Button
        android:id="@+id/copyToClipboard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_margin="15dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/button02"
        android:textSize="24dp"
        android:text="@string/btn_copy" />

</LinearLayout>